// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select matches snapshot for errorText: errorText mount 1`] = `
.emotion-0 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-10 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  border-left: 4px solid #b10e1e;
  margin-right: 15px;
  padding-left: 10px;
}

.emotion-10:after {
  content: '';
  display: table;
  clear: both;
}

.emotion-3 {
  display: block;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  color: #6f777b;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-6 {
  display: block;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  color: #b10e1e;
  padding-top: 4px;
  padding-bottom: 2px;
}

@media only screen and (min-width:641px) {
  .emotion-6 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-9 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  height: 33px;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
  border: 4px solid #b10e1e;
}

@media only screen and (min-width:641px) {
  .emotion-9 {
    width: 50%;
    height: 38px;
    font-size: 19px;
    line-height: 1.31579;
  }
}

.emotion-9:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

<Styled(Select)
  errorText="example"
  hint="example"
  label="example"
  meta={
    Object {
      "error": "example",
      "touched": true,
    }
  }
>
  <Select
    className="emotion-1"
    errorText="example"
    hint="example"
    input={Object {}}
    label="example"
    meta={
      Object {
        "error": "example",
        "touched": true,
      }
    }
  >
    <Styled(Label)
      className="emotion-1"
      error="example"
    >
      <Label
        className="emotion-1"
        error="example"
      >
        <Styled(label)
          className="emotion-1"
          error="example"
        >
          <label
            className="emotion-10"
          >
            <Styled(LabelText)>
              <LabelText
                className="emotion-1"
              >
                <Styled(span)
                  className="emotion-1"
                >
                  <span
                    className="emotion-0"
                  >
                    example
                  </span>
                </Styled(span)>
              </LabelText>
            </Styled(LabelText)>
            <Styled(HintText)>
              <HintText
                className="emotion-1"
              >
                <Styled(span)
                  className="emotion-1"
                >
                  <span
                    className="emotion-3"
                  >
                    example
                  </span>
                </Styled(span)>
              </HintText>
            </Styled(HintText)>
            <Styled(ErrorText)>
              <ErrorText
                className="emotion-1"
              >
                <Styled(span)
                  className="emotion-1"
                >
                  <span
                    className="emotion-6"
                  >
                    example
                  </span>
                </Styled(span)>
              </ErrorText>
            </Styled(ErrorText)>
            <Styled(select)
              error="example"
            >
              <select
                className="emotion-9"
              >
                example
              </select>
            </Styled(select)>
          </label>
        </Styled(label)>
      </Label>
    </Styled(Label)>
  </Select>
</Styled(Select)>
`;

exports[`Select matches snapshot: enzyme.mount 1`] = `
.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
}

.emotion-4:after {
  content: '';
  display: table;
  clear: both;
}

.emotion-0 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    font-size: 19px;
    line-height: 1.3;
  }
}

.emotion-3 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  height: 33px;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    width: 50%;
    height: 38px;
    font-size: 19px;
    line-height: 1.31579;
  }
}

.emotion-3:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

<Styled(Select)
  label="example"
>
  <Select
    className="emotion-1"
    input={Object {}}
    label="example"
    meta={Object {}}
  >
    <Styled(Label)
      className="emotion-1"
    >
      <Label
        className="emotion-1"
      >
        <Styled(label)
          className="emotion-1"
        >
          <label
            className="emotion-4"
          >
            <Styled(LabelText)>
              <LabelText
                className="emotion-1"
              >
                <Styled(span)
                  className="emotion-1"
                >
                  <span
                    className="emotion-0"
                  >
                    example
                  </span>
                </Styled(span)>
              </LabelText>
            </Styled(LabelText)>
            <Styled(select)>
              <select
                className="emotion-3"
              >
                example
              </select>
            </Styled(select)>
          </label>
        </Styled(label)>
      </Label>
    </Styled(Label)>
  </Select>
</Styled(Select)>
`;
